# rlm-nix-wasm

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  RESEARCH.md  docker-compose.yml  pyproject.toml  shell.nix
.claude/: settings.json
data/: codeqa_context.txt  codeqa_question.json  generate_haystack.py  large_needle_nightmare_adversarial_needle_design_vs_dsl.md  large_needle_nightmare_haystack.txt  large_needle_nightmare_question_answer.txt  needle_context.txt  needle_hard_context.txt  needle_nightmare_answer.txt  needle_nightmare_context.txt
docs/: explanation.md  how-to-guides.md  reference.md  tutorial.md
docs/plans/: 2026-02-09-timing-instrumentation.md
examples/: oolong_dnd_sample.txt  oolong_sample.txt
specs/: RLMOperations.tla  RLMProtocol.cfg  RLMProtocol.tla
src/rlm/: cli.py  config.py  narrative.py  orchestrator.py  pricing.py  timing.py  trace.py  types.py
src/rlm/cache/: store.py
src/rlm/eval/: datasets.py  report.py  runner.py  scoring.py
src/rlm/evaluator/: lightweight.py  sandbox.py  wasm_sandbox.py
src/rlm/llm/: client.py  parser.py  prompts.py
src/rlm/nix/: builder.py  compiler.py  store.py  (+1 more)
src/rlm_secure.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_cache.py  test_config.py  test_eval.py  test_eval_runner.py  test_eval_scoring.py  test_evaluator.py  test_nix_compiler.py  test_ops.py  test_orchestrator.py  test_parser.py  test_properties.py  test_properties_wasm.py  test_timing.py  test_trace.py  test_wasm_sandbox.py
web/: index.html  server.py
(+16 files in other folders)
