[project]
name = "rlm-nix-wasm"
version = "0.1.0"
description = "Sandboxed Recursive Language Models with Nix"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "litellm>=1.50",
    "instructor>=1.7",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
wasm = [
    "wasmtime>=25.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "hypothesis>=6.100",
    "wasmtime>=25.0",
]

[project.scripts]
rlm = "rlm.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
